[package]
name = "azure_storage_offload_admin_api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
prometheus = { workspace = true }
azure_storage_offload_core = { path = "../../service/core" }
